--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore all
+*
+
+# Unignore all with extensions
+!*.*
+
+# Unignore all dirs
+!*/
+
 # Prerequisites
 *.d
 
@@ -53,8 +62,3 @@ dkms.conf
 
 # vscode/
 .vscode/
-
-# gitignore file without extension
-*
-!/**/
-!*.*
